--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.28.1",
+    "@uploadthing/react": "^6.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.298.0",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-datepicker": "^4.25.0",
+    "react-dom": "^18",
+    "tailwind-merge": "^2.1.0",
+    "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
